--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
+    "framer-motion": "^11.14.4",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-swipeable": "^7.0.2",
     "swapy": "^1.0.2"
   },
   "devDependencies": {
