--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^17.0.0",
-    "framer-motion": "^11.14.4",
+    "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
+    "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-swipeable": "^7.0.2",
-    "swapy": "^1.0.2"
+    "swapy": "^1.0.2",
+    "swipejs": "^2.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
