--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@hello-pangea/dnd": "^17.0.0",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
+    "moment": "^2.30.1",
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
